--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 frameElement.style.display = "block";
             }
 
-            else if (input1_letter == "F" && input2_letter == "R") {
-                frameElement.src = "https://fr.wikipedia.org/";
+            else if (input1_letter == "D" && input2_letter == "E") {
+                frameElement.src = "https://de.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
-            else if (input1_letter == "D" && input2_letter == "E") {
-                frameElement.src = "https://de.wikipedia.org/";
+            else if (input1_letter == "F" && input2_letter == "R") {
+                frameElement.src = "https://fr.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -104,6 +104,26 @@
                 frameElement.style.display = "block";
             }
 
+            else if (input1_letter == "I" && input2_letter == "T") {
+                frameElement.src = "https://it.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "L") {
+                frameElement.src = "https://nl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "L") {
+                frameElement.src = "https://pl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Z" && input2_letter == "H") {
+                frameElement.src = "https://zh.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
             else if (input1_letter == "R" && input2_letter == "U") {
                 frameElement.src = "https://ru.wikipedia.org/";
                 frameElement.style.display = "block";
@@ -114,18 +134,103 @@
                 frameElement.style.display = "block";
             }
 
-            else if (input1_letter == "I" && input2_letter == "T") {
-                frameElement.src = "https://it.wikipedia.org/";
+            else if (input1_letter == "A" && input2_letter == "R") {
+                frameElement.src = "https://ar.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
-            else if (input1_letter == "Z" && input2_letter == "H") {
-                frameElement.src = "https://zh.wikipedia.org/";
+            else if (input1_letter == "U" && input2_letter == "K") {
+                frameElement.src = "https://uk.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "E") {
+                frameElement.src = "https://he.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "O") {
+                frameElement.src = "https://ko.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "U") {
+                frameElement.src = "https://hu.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "V") {
+                frameElement.src = "https://sv.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "D" && input2_letter == "A") {
+                frameElement.src = "https://da.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "I") {
+                frameElement.src = "https://fi.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "S") {
+                frameElement.src = "https://cs.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "F" && input2_letter == "A") {
-                frameElement.src = "https://en.wikipedia.org/";
+                frameElement.src = "https://fa.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "I" && input2_letter == "D") {
+                frameElement.src = "https://id.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "H") {
+                frameElement.src = "https://th.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "R" && input2_letter == "O") {
+                frameElement.src = "https://ro.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "G") {
+                frameElement.src = "https://bg.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "K") {
+                frameElement.src = "https://kk.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "E" && input2_letter == "L") {
+                frameElement.src = "https://el.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "E" && input2_letter == "U") {
+                frameElement.src = "https://eu.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "R") {
+                frameElement.src = "https://hr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "Y") {
+                frameElement.src = "https://hy.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "O") {
+                frameElement.src = "https://no.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
