--- a/index.html
+++ b/index.html
@@ -234,6 +234,107 @@
                 frameElement.style.display = "block";
             }
 
+            // Adding 20 new language combinations
+            else if (input1_letter == "S" && input2_letter == "K") {
+                frameElement.src = "https://sk.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "L") {
+                frameElement.src = "https://sl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "E" && input2_letter == "T") {
+                frameElement.src = "https://et.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "V" && input2_letter == "I") {
+                frameElement.src = "https://vi.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "R") {
+                frameElement.src = "https://sr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "T") {
+                frameElement.src = "https://lt.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "V") {
+                frameElement.src = "https://lv.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "I") {
+                frameElement.src = "https://hi.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "S") {
+                frameElement.src = "https://ms.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "N") {
+                frameElement.src = "https://bn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "R") {
+                frameElement.src = "https://tr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "A" && input2_letter == "Z") {
+                frameElement.src = "https://az.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "A") {
+                frameElement.src = "https://ta.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "U" && input2_letter == "R") {
+                frameElement.src = "https://ur.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "A") {
+                frameElement.src = "https://ka.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "E") {
+                frameElement.src = "https://te.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "K") {
+                frameElement.src = "https://mk.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "L") {
+                frameElement.src = "https://ml.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "S") {
+                frameElement.src = "https://bs.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "A" && input2_letter == "F") {
+                frameElement.src = "https://af.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
             else {
                 frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias";
                 frameElement.style.display = "block";
