three-letter languages

--- a/index.html
+++ b/index.html
@@ -335,6 +335,31 @@
                 frameElement.style.display = "block";
             }
 
+            else if (input1_letter == "C" && input2_letter == "A") {
+                frameElement.src = "https://cat.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "G" && input2_letter == "L") {
+                frameElement.src = "https://gle.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "A" && input2_letter == "S") {
+                frameElement.src = "https://ast.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "R") {
+                frameElement.src = "https://bre.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "Y") {
+                frameElement.src = "https://cym.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
             else {
                 frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias";
                 frameElement.style.display = "block";
