--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             }
 
             else {
-                frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias";
+                frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias#All_Wikipedias_ordered_by_number_of_articles";
                 frameElement.style.display = "block";
             }
         }
