--- a/index.html
+++ b/index.html
@@ -380,6 +380,425 @@
                 frameElement.style.display = "block";
             }
 
+            // Adding more languages
+            else if (input1_letter == "A" && input2_letter == "M") {
+                frameElement.src = "https://amh.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "E") {
+                frameElement.src = "https://bel.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "E") {
+                frameElement.src = "https://ceb.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "O") {
+                frameElement.src = "https://fos.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "G" && input2_letter == "A") {
+                frameElement.src = "https://gal.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "G" && input2_letter == "U") {
+                frameElement.src = "https://guj.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "I" && input2_letter == "S") {
+                frameElement.src = "https://isl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "N") {
+                frameElement.src = "https://kan.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "M") {
+                frameElement.src = "https://kmr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "R") {
+                frameElement.src = "https://mar.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "Y") {
+                frameElement.src = "https://mya.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "E") {
+                frameElement.src = "https://nep.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "O" && input2_letter == "C") {
+                frameElement.src = "https://oci.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "A") {
+                frameElement.src = "https://pan.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "I") {
+                frameElement.src = "https://sin.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "W") {
+                frameElement.src = "https://swa.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "G") {
+                frameElement.src = "https://tgl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "W" && input2_letter == "A") {
+                frameElement.src = "https://war.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Y" && input2_letter == "I") {
+                frameElement.src = "https://yid.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            // Adding remaining languages
+            else if (input1_letter == "A" && input2_letter == "N") {
+                frameElement.src = "https://ang.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "H") {
+                frameElement.src = "https://bho.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "O") {
+                frameElement.src = "https://cor.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "D" && input2_letter == "V") {
+                frameElement.src = "https://dve.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "Y") {
+                frameElement.src = "https://fry.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "G" && input2_letter == "D") {
+                frameElement.src = "https://gla.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "I" && input2_letter == "O") {
+                frameElement.src = "https://ido.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "J" && input2_letter == "V") {
+                frameElement.src = "https://jav.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "S") {
+                frameElement.src = "https://kas.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "Y") {
+                frameElement.src = "https://kyr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "A") {
+                frameElement.src = "https://lat.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "I") {
+                frameElement.src = "https://lim.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "O") {
+                frameElement.src = "https://lao.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "G") {
+                frameElement.src = "https://mlg.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "N") {
+                frameElement.src = "https://mon.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "O" && input2_letter == "R") {
+                frameElement.src = "https://ori.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "S") {
+                frameElement.src = "https://pus.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Q" && input2_letter == "U") {
+                frameElement.src = "https://que.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "A") {
+                frameElement.src = "https://san.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "O") {
+                frameElement.src = "https://som.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "U") {
+                frameElement.src = "https://sun.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "K") {
+                frameElement.src = "https://tkm.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "T") {
+                frameElement.src = "https://tat.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "U" && input2_letter == "G") {
+                frameElement.src = "https://uig.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "U" && input2_letter == "Z") {
+                frameElement.src = "https://uzb.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "V" && input2_letter == "O") {
+                frameElement.src = "https://vol.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "W" && input2_letter == "O") {
+                frameElement.src = "https://wol.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "X" && input2_letter == "H") {
+                frameElement.src = "https://xho.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Y" && input2_letter == "O") {
+                frameElement.src = "https://yor.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Z" && input2_letter == "U") {
+                frameElement.src = "https://zul.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            // Adding missing languages
+            else if (input1_letter == "A" && input2_letter == "Y") {
+                frameElement.src = "https://aym.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "V") {
+                frameElement.src = "https://chv.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "J") {
+                frameElement.src = "https://fij.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "I" && input2_letter == "E") {
+                frameElement.src = "https://ina.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "U") {
+                frameElement.src = "https://kur.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "I") {
+                frameElement.src = "https://min.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "V") {
+                frameElement.src = "https://nav.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "I") {
+                frameElement.src = "https://pih.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "R" && input2_letter == "M") {
+                frameElement.src = "https://rom.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "C") {
+                frameElement.src = "https://scn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "H") {
+                frameElement.src = "https://shn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "N") {
+                frameElement.src = "https://tna.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "S") {
+                frameElement.src = "https://tsn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "V" && input2_letter == "E") {
+                frameElement.src = "https://vec.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            // Adding even more languages
+            else if (input1_letter == "A" && input2_letter == "C") {
+                frameElement.src = "https://ace.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "M") {
+                frameElement.src = "https://bam.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "B") {
+                frameElement.src = "https://cbk.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "D" && input2_letter == "S") {
+                frameElement.src = "https://dsb.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "E" && input2_letter == "O") {
+                frameElement.src = "https://epo.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "U") {
+                frameElement.src = "https://fur.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "A") {
+                frameElement.src = "https://hau.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "I" && input2_letter == "K") {
+                frameElement.src = "https://iku.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "W") {
+                frameElement.src = "https://kwi.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "B") {
+                frameElement.src = "https://lbe.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "H") {
+                frameElement.src = "https://mhr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "A") {
+                frameElement.src = "https://nah.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "O" && input2_letter == "M") {
+                frameElement.src = "https://omy.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "M") {
+                frameElement.src = "https://pms.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "R" && input2_letter == "W") {
+                frameElement.src = "https://rwa.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "N") {
+                frameElement.src = "https://sna.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "O") {
+                frameElement.src = "https://ton.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "W") {
+                frameElement.src = "https://twi.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "W" && input2_letter == "L") {
+                frameElement.src = "https://wln.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Z" && input2_letter == "A") {
+                frameElement.src = "https://zea.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
             else {
                 frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias#All_Wikipedias_ordered_by_number_of_articles";
                 frameElement.style.display = "block";
